added lesson3 homework

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -16,7 +16,7 @@
                     <h1 class="mt-5">GeekShop Store</h1>
                     <p>{{ hello_content }}</p>
                     <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                        <a id="start-purchase-link" href="{% url 'products' %}">
+                        <a id="start-purchase-link" href="{% url 'products:index' %}">
                             Начать покупки
                         </a>
                     </button>
