--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="users/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,7 +48,7 @@
                             <a class="dropdown-item" href="users/profile.html">Профиль</a>
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                        <li><a class="dropdown-item" href="admin/admin.html">Админ-панель</a></li>
+                        <li><a class="dropdown-item" href="admin">Админ-панель</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
