--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +9,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>GeekShop - Авторизация</title>
-    <link href="../css/auth-admin.css" rel="stylesheet"/>
+    <link href="{% static 'css/auth-admin.css' %}" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
@@ -29,16 +31,17 @@
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
                             </div>
                             <div class="card-body">
-                                <form>
+                                <form method="post" action="{% url 'users:login' %}">
+                                    {% csrf_token %}
                                     <div class="form-group">
-                                        <label class="small mb-1" for="inputEmailAddress">Имя пользователя</label>
-                                        <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                               placeholder="Введите имя пользователя"/>
+                                        <label class="small mb-1" for="{{ form.username.id_for_label }}">
+                                            Имя пользователя
+                                        </label>
+                                        {{ form.username }}
                                     </div>
                                     <div class="form-group">
-                                        <label class="small mb-1" for="inputPassword">Пароль</label>
-                                        <input class="form-control py-4" id="inputPassword" type="password"
-                                               placeholder="Введите пароль"/>
+                                        <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
+                                        {{ form.password }}
                                     </div>
                                     <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a class="small" href="#">Забыли пароль?</a>
