added city field to registration form with validation logic

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -36,6 +36,15 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="small mb-1"
+                                                   for="{{ form.city.id_for_label }}">Город</label>
+                                            {{ form.city }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-md-6">
                                         <label class="small mb-1" for="inputUsername">Имя пользователя</label>
                                         {{ form.username }}
                                     </div>
