added basket.sum() function

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -15,7 +15,7 @@
                             <input name="basketID" type="number" class="form-control"
                                    value="{{ item.quantity }}" min="0">
                         </div>
-                        <div class="col-lg-4">{{ item.product.price }} руб.</div>
+                        <div class="col-lg-4">{{ item.sum }} руб.</div>
                         <div class="col-lg-4">
                             <a href="{% url 'basket:basket_remove' item.id %}">
                                 <i class="fas fa-trash"></i>
