--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,7 +15,7 @@
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
                     {% for category in categories %}
-                    <a href="#" class="list-group-item">{{category.name}}</a>
+                        <a href="#" class="list-group-item">{{ category.name }}</a>
                     {% endfor %}
                 </div>
 
@@ -23,6 +23,18 @@
             <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
+                {% if messages %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                         style="margin-top: 50px;">
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+
 
                 <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -98,12 +110,12 @@
 
     </div>
 {% endblock %}
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
-        </div>
-        <!-- /.container -->
-    </footer>
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
+    </div>
+    <!-- /.container -->
+</footer>
 {% block footer %}
 
 {% endblock %}
