--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,18 +5,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
-                    {% if messages or form.errors %}
-                        <div class="
-                        alert alert-dismissible fade show
-                        {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
+                    {% if form.errors %}
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert"
                              style="margin-top: 50px;">
-                            {% if messages %}
-                                {% for mesaage in messages %}
-                                    {{ mesaage }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.non_field_errors }}
-                            {% endif %}
+                            {{ form.errors }}
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
