--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,6 +9,23 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
+                {% if messages or form.errors %}
+                    <div class="
+                        alert alert-dismissible fade show
+                        {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
+                         style="margin-top: 50px;">
+                        {% if messages %}
+                            {% for mesaage in messages %}
+                                {{ mesaage }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.non_field_errors }}
+                        {% endif %}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
                 <h4 class="mt-3 mb-3">Профиль</h4>
                 <div class="col-lg-12 text-center">
                     <img width="100" height="100"
