--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,6 +1,6 @@
 {% if basket %}
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-        Корзина <span class="badge badge-secondary badge-pill">{{ overall_quantity }}</span>
+        Корзина <span class="badge badge-secondary badge-pill">{{ basket.0.overall_quantity }}</span>
     </h4>
     {% for item in basket %}
         <div class="card mb-3">
@@ -29,7 +29,7 @@
     <div class="card mb-3">
         <div class="card-footer">
             <p class="float-left">Итого</p>
-            <h4 class="float-right">{{ overall_sum }} руб.</h4>
+            <h4 class="float-right">{{ basket.0.overall_sum }} руб.</h4>
         </div>
     </div>
     <a class="btn btn-success btn-lg float-right" href="../orders/checkout_order.html">
