--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -44,13 +44,16 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-1.jpg' %}" alt="First slide">
+                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-1.jpg' %}"
+                                 alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-2.jpg' %}" alt="Second slide">
+                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-2.jpg' %}"
+                                 alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-3.jpg' %}" alt="Third slide">
+                            <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-3.jpg' %}"
+                                 alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -62,32 +65,32 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+                <div class="product-list">
+                    <div class="row">
 
-                <div class="row">
-
-                    {% for product in products %}
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#">
-                                    <img class="card-img-top"
-                                         src="{{ product.image.url }}"
-                                         alt="">
-                                </a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ product.name }}</a>
-                                    </h4>
-                                    <h5>{{ product.price }} руб.</h5>
-                                    <p class="card-text">{{ product.description }}</p>
-                                </div>
-                                <div class="card-footer text-center">
-                                    <a href="{% url 'basket:basket_add' product.id %}" class="btn btn-outline-success">
-                                        Отправить в корзину
+                        {% for product in products %}
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card h-100">
+                                    <a href="#">
+                                        <img class="card-img-top"
+                                             src="{{ product.image.url }}"
+                                             alt="">
                                     </a>
+                                    <div class="card-body">
+                                        <h4 class="card-title">
+                                            <a href="#">{{ product.name }}</a>
+                                        </h4>
+                                        <h5>{{ product.price }} руб.</h5>
+                                        <p class="card-text">{{ product.description }}</p>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <input type="button" class="btn btn-outline-success"
+                                               name="{{ product.id }}" value="Отправить в корзину"/>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
 
                 <nav aria-label="Page navigation example">
@@ -110,12 +113,15 @@
 
     </div>
 {% endblock %}
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
-    </div>
-    <!-- /.container -->
-</footer>
-{% block footer %}
 
+{% block footer %}
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+{% endblock %}
+{% block js %}
+    <script src="{% static 'js/products.js' %}"></script>
 {% endblock %}
