--- a/geekshop_admin/templates/geekshop_admin/admin-users-update-delete.html
+++ b/geekshop_admin/templates/geekshop_admin/admin-users-update-delete.html
@@ -1,38 +1,12 @@
-{% extends 'products/base.html' %}
-{% load static %}
-
-{% block css %}
-    <link href="{% static 'css/profile.css' %}" rel="stylesheet">
-{% endblock %}
+{% extends 'geekshop_admin/base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7">
-                {% if messages or form.errors %}
-                    <div class="
-                        alert alert-dismissible fade show
-                        {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
-                         style="margin-top: 50px;">
-                        {% if messages %}
-                            {% for mesaage in messages %}
-                                {{ mesaage }}
-                            {% endfor %}
-                        {% else %}
-                            {{ form.non_field_errors }}
-                        {% endif %}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endif %}
-                <h4 class="mt-3 mb-3">Профиль</h4>
-                <div class="col-lg-12 text-center">
-                    <img width="100" height="100"
-                         src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
-                         class="img-thumbnail">
-                </div>
-                <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
+    <main>
+        <div class="container-fluid">
+            <h1 class="mt-4">Редактирование пользователя | {{ User.username }}</h1>
+            <div class="card-body">
+                <form action="{% url 'geekshop-admin:admin-users-update' User.id %}" method="post"
+                      enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-6">
@@ -59,7 +33,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.city.id_for_label }}">Город</label>
+                            <label class="small mb-1" for="{{ form.city.id_for_label }}">Имя пользователя</label>
                             {{ form.city }}
                         </div>
                     </div>
@@ -80,14 +54,15 @@
                         </div>
                     </div>
                 </form>
-            </div>
-            <div class="col-lg-5">
-                {% include 'basket/basket.html' %}
+                <div class="row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <a href="{% url 'geekshop-admin:admin-users-delete' user.id %}"
+                           class="btn btn-danger btn-block">
+                            Удалить
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-{% endblock %}
-
-{% block js %}
-    <script src="{% static 'js/basket.js' %}"></script>
+    </main>
 {% endblock %}
