--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -33,7 +33,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i>
+                    </a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
@@ -46,7 +47,10 @@
                                 <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                             </li>
                             <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                            <li><a class="dropdown-item" href="{% url 'geekshop-admin:admin' %}">Админ-панель</a></li>
+                            {% if user.is_staff or user.is_superuser %}
+                                <li><a class="dropdown-item" href="{% url 'geekshop-admin:admin' %}">Админ-панель</a>
+                                </li>
+                            {% endif %}
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
