--- a/geekshop_admin/templates/geekshop_admin/base.html
+++ b/geekshop_admin/templates/geekshop_admin/base.html
@@ -53,7 +53,7 @@
                         </div>
                         Пользователи
                     </a>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="{% url 'geekshop-admin:admin-product-category-read' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-shopping-basket"></i>
                         </div>
