--- a/geekshop_admin/templates/geekshop_admin/base.html
+++ b/geekshop_admin/templates/geekshop_admin/base.html
@@ -59,7 +59,7 @@
                         </div>
                         Категории
                     </a>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="{% url 'geekshop-admin:admin-product-read' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-tshirt"></i>
                         </div>
