--- a/geekshop_admin/templates/geekshop_admin/admin-users-update-delete.html
+++ b/geekshop_admin/templates/geekshop_admin/admin-users-update-delete.html
@@ -56,7 +56,7 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <a href="{% url 'geekshop-admin:admin-users-delete' user.id %}"
+                        <a href="{% url 'geekshop-admin:admin-users-delete' User.id %}"
                            class="btn btn-danger btn-block">
                             Удалить
                         </a>
