--- a/geekshop_admin/templates/geekshop_admin/admin-product-read.html
+++ b/geekshop_admin/templates/geekshop_admin/admin-product-read.html
@@ -39,7 +39,7 @@
                             </tr>
                             </tfoot>
                             <tbody>
-                            {% for Product in Products %}
+                            {% for Product in object_list %}
                                 <tr>
                                     <td>
                                         <a href="{% url 'geekshop-admin:admin-product-update' Product.id %}"
