--- a/geekshop_admin/templates/geekshop_admin/admin-product-update-delete.html
+++ b/geekshop_admin/templates/geekshop_admin/admin-product-update-delete.html
@@ -3,9 +3,9 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование товара | {{ Product.name }}</h1>
+            <h1 class="mt-4">Редактирование товара | {{ object.name }}</h1>
             <div class="card-body">
-                <form action="{% url 'geekshop-admin:admin-product-update' Product.id %}" method="post"
+                <form action="{% url 'geekshop-admin:admin-product-update' object.id %}" method="post"
                       enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
@@ -63,10 +63,10 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <a href="{% url 'geekshop-admin:admin-product-delete' Product.id %}"
-                           class="btn btn-danger btn-block">
-                            Удалить
-                        </a>
+                        <form action="{% url 'geekshop-admin:admin-product-delete' object.id %}" method="post">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-danger btn-block" value="Удалить">
+                        </form>
                     </div>
                 </div>
             </div>
