--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,18 +5,13 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
-                    {% if messages or form.errors %}
-                        <div class="
-                        alert alert-dismissible fade show
-                        {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
+                    {% if form.errors %}
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert"
                              style="margin-top: 50px;">
-                            {% if messages %}
-                                {% for message in messages %}
-                                    {{ message }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.non_field_errors }}
-                            {% endif %}
+                            {{ form.errors }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
                     {% endif %}
                     <div class="card shadow-lg border-0 rounded-lg mt-5">
