--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -40,10 +40,10 @@
                                     <input class="btn btn-primary" type="submit" value="Авторизоваться">
                                 </div>
                                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                    <a href="#">
+                                    <a href="{% url 'social:begin' 'google-oauth2' %}">
                                         <i class="fab fa-google fa-2x" style="color: #d9503e;"></i>
                                     </a>
-                                    <a href="#">
+                                    <a href="{% url 'social:begin' 'vk-oauth2' %}">
                                         <i class="fab fa-vk fa-2x" style="color: #4a658b;"></i>
                                     </a>
                                     <a href="#">
