--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -10,6 +10,20 @@
         <!--    <div class="alert alert-light text-center" role="alert">-->
         <!--        Информационное сообщение-->
         <!--    </div>-->
+        {% if messages or form.errors %}
+            <div class="
+                        alert alert-dismissible fade show
+                        {% if messages %} alert-success {% else %} alert-warning {% endif %}" role="alert"
+                 style="margin-top: 50px;">
+                {% if messages %}
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                {% else %}
+                    {{ form.non_field_errors }}
+                {% endif %}
+            </div>
+        {% endif %}
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
