added one-to-one additional profile for user

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -75,6 +75,16 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile_form.gender.id_for_label }}">Пол</label>
+                            {{ profile_form.gender }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile_form.about.id_for_label }}">О себе</label>
+                            {{ profile_form.about }}
+                        </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
